--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -12,45 +12,25 @@
 
 	--white: rgba(255, 255, 255, 0.87);
 	--black: #242424;
+	--white-secondary: #bfbfbf;
 	--color-odd: #eed2aa;
 	--color-even: #90502f;
 	--color-frame: #62351f;
-	--cell-size: 72px;
+	--cell-size: 42px;
 	--piece-size: 54px;
 	--board-size: calc(var(--cell-size) * 8);
-}
 
-.board {
-	display: flex;
-	flex-wrap: wrap;
-	width: var(--board-size);
-	height: var(--board-size);
+	@media (min-width: 640px) {
+		--cell-size: 52px;
+	}
 
-	background: conic-gradient(
-		var(--color-even) 90deg,
-		var(--color-odd) 90deg 180deg,
-		var(--color-even) 180deg 270deg,
-		var(--color-odd) 270deg
-	);
-	background-size: calc(var(--cell-size) * 2) calc(var(--cell-size) * 2);
-}
+	@media (min-width: 768px) {
+		--cell-size: 62px;
+	}
 
-.cell {
-	color: var(--black);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: var(--cell-size);
-	height: var(--cell-size);
-}
-
-a {
-	font-weight: 500;
-	color: #646cff;
-	text-decoration: inherit;
-}
-a:hover {
-	color: #535bf2;
+	@media (min-width: 1024px) {
+		--cell-size: 72px;
+	}
 }
 
 body {
@@ -61,50 +41,7 @@ body {
 	min-height: 100vh;
 }
 
-h1 {
-	font-size: 3.2em;
-	line-height: 1.1;
-}
-
-button {
-	border-radius: 8px;
-	border: 1px solid transparent;
-	padding: 0.6em 1.2em;
-	font-size: 1em;
-	font-weight: 500;
-	font-family: inherit;
-	background-color: #1a1a1a;
-	cursor: pointer;
-	transition: border-color 0.25s;
-}
-button:hover {
-	border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-	outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-	padding: 2em;
-}
-
 #app {
-	max-width: 1280px;
-	margin: 0 auto;
-	padding: 2rem;
-	text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
-	}
+	margin-left: auto;
+	margin-right: auto;
 }
